Update framework manager prototype journey (#1)
* Update  no-list-style mixin to remove padding

* Add in basic desktop in page nav styling

* Update users page layout

* Add checkboxes to filters

* Commetn quick filters

* Update Featured media component

* Update listing with component

* Update FM dash, user and user search screens, and set the home href to the logged in welcome screen

* Add login journey

* Update framewrok details with more relivant information

--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/index.html
@@ -7,91 +7,134 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+NHS.UK prototype kit
 {% endblock %}
 
 <!-- For adding a breadcrumb -->
 <!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
 {% block beforeContent %}
-  {{ breadcrumb({
-    items: [{
-      href: "/prototypes/admin-frameworks",
-      text: "Home"
-    },{
-      href: "/prototypes/admin-frameworks/select-a-framework",
-      text: "Select a framework"
-    }]
-  }) }}
+{{ breadcrumb({
+  items: [{
+    href: "/prototypes/admin-frameworks",
+    text: "Home"
+  },{
+    href: "/prototypes/admin-frameworks/select-a-framework",
+    text: "Select a framework"
+  }]
+}) }}
 {% endblock %}
 
 {% block content %}
-  <div class="nhsuk-width-container">
-    <div class="nhsuk-grid-row">
-      <div class="nhsuk-grid-column-full">
-        <h1>IV Therapy passport framework dashboard</h1>
-        <p class="nhsuk-lead-text nhsuk-body-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repellendus consequuntur odio, dolore nostrum eveniet.</p>
-      </div>
-    </div>
-
-    <div class="nhsuk-grid-row">
-      <div class="nhsuk-grid-column-full">
-
-        <ul class="nhsuk-grid-row nhsuk-card-group">
-          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-            {{ card({
-              "href": "framework-dashboard/users",
-              "clickable": "true",
-              "heading": "Users",
-              "headingClasses": "nhsuk-heading-xs",
-              "description": "Manage user on this framework"
-            }) }}
-          </li>
-          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-            {{ card({
-              "href": "#",
-              "clickable": "true",
-              "heading": "Reports",
-              "headingClasses": "nhsuk-heading-xs",
-              "description": "Download self assesment reprots"
-            }) }}
-          </li>
-          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-            {{ card({
-              "href": "#",
-              "clickable": "true",
-              "heading": "Support",
-              "headingClasses": "nhsuk-heading-xs",
-              "description": "Access Digital Learning Solutions support"
-            }) }}
-          </li>
-        </ul>
-
-        <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
-
-        <div class="nhsuk-grid-row">
-          <div class="nhsuk-grid-column-full">
-
-            {{ details({
-              "classes": "nhsuk-expander",
-              "text": "Framework details",
-              "HTML": "
-              <p>You can see your GP records by:</p>
-              <ul>
-                <li>asking for them at your GP surgery </li>
-                <li>going online to see them (if you have signed up for <a href=\"/using-the-nhs/nhs-services/gps/gp-online-services/\">GP online services</a>) </li>
-              </ul>"
-            }) }}
-
-          </div>
-        </div>  
-
-        {# <div class="nhsuk-u-reading-width">
-          <p class="nhsuk-u-margin-bottom-0">Visit the <a href="https://service-manual.nhs.uk">NHS digital service manual</a> for guidance and examples.</p>
-        </div> #}
-
-      </div>
+<div class="nhsuk-width-container">
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-full">
+      <h1>IV Therapy passport framework dashboard</h1>
+      <p class="nhsuk-lead-text nhsuk-body-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repellendus consequuntur odio, dolore nostrum eveniet.</p>
     </div>
   </div>
+
+  <div class="nhsuk-grid-row">
+    <div class="nhsuk-grid-column-full">
+
+      <ul class="nhsuk-grid-row nhsuk-card-group">
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+          {{ card({
+            "href": "framework-dashboard/users",
+            "clickable": "true",
+            "heading": "Users",
+            "headingClasses": "nhsuk-heading-xs",
+            "description": "Manage user on this framework"
+          }) }}
+        </li>
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+          {{ card({
+            "href": "#",
+            "clickable": "true",
+            "heading": "Reports",
+            "headingClasses": "nhsuk-heading-xs",
+            "description": "Download self assesment reprots"
+          }) }}
+        </li>
+        <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+          {{ card({
+            "href": "#",
+            "clickable": "true",
+            "heading": "Support",
+            "headingClasses": "nhsuk-heading-xs",
+            "description": "Access Digital Learning Solutions support"
+          }) }}
+        </li>
+      </ul>
+
+      <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
+
+      <div class="nhsuk-grid-row">
+        <div class="nhsuk-grid-column-full">
+
+          {% set frameworkDetails %}
+            <div class="nhsuk-details__text">
+              <dl class="nhsuk-summary-list details-list-with-button">
+                <div class="nhsuk-summary-list__row details-list-with-button__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Framework name
+                  </dt>
+
+                  <dd class="nhsuk-summary-list__value">
+                    IV Therapy passport
+                  </dd>
+                </div>
+
+                <div class="nhsuk-summary-list__row details-list-with-button__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Framework manager
+                  </dt>
+
+                  <dd class="nhsuk-summary-list__value">
+                    Susan Patrick
+                  </dd>
+                </div>
+
+                <div class="nhsuk-summary-list__row details-list-with-button__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Framework contact number
+                  </dt>
+
+                  <dd class="nhsuk-summary-list__value">
+                    00000 000 000
+                  </dd>
+                </div>
+
+                <div class="nhsuk-summary-list__row details-list-with-button__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Framework contact email
+                  </dt>
+
+                  <dd class="nhsuk-summary-list__value">
+                    prototype-iv.passport@prototype-mail.com
+                  </dd>
+                </div>
+              </dl>
+
+              <a class="nhsuk-button" role="button" href="#edit-details">Edit framework details</a>
+            </div>
+          {% endset %}
+          {{ details({
+            open: true,
+            "classes": "nhsuk-expander",
+            "text": "Framework details",
+            "HTML": frameworkDetails
+          }) }}
+
+        </div>
+      </div>
+
+      {# <div class="nhsuk-u-reading-width">
+        <p class="nhsuk-u-margin-bottom-0">Visit the <a href="https://service-manual.nhs.uk">NHS digital service manual</a> for guidance and examples.</p>
+      </div> #}
+
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 <!-- For adding a back link -->
