--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
@@ -32,39 +32,193 @@
 
 {% block content %}
   <div class="nhsuk-width-container">
-    <div class="nhsuk-grid-row">
-      <div class="nhsuk-grid-column-full">
-        <h1>
-          <span class="nhsuk-caption-l">
-            IV Therapy passport framework
-            <span class="nhsuk-u-visually-hidden"> - </span>
-          </span>
-          Search and manage users
-        </h1>
-
-
-        <div class="">
-          <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-2">
-          <div>
-            <a class="nhsuk-u-margin-right-4 nhsuk-link-active nhsuk-u-font-weight-bold" href="#">Search users</a>
-            <a class="nhsuk-u-margin-right-4" href="#">Register users</a>
-            {# <a class="nhsuk-u-margin-right-4" href="#">Send welcome message</a> #}
-            <a class="nhsuk-u-margin-right-4" href="#">Bulk opperation</a>
-          </div>
-          <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
+    <div class="proto-heading-block">
+      <div class="nhsuk-grid-row">
+        <div class="nhsuk-grid-column-full">
+          <h1>
+            <span class="nhsuk-caption-l">
+              IV Therapy passport framework
+              <span class="nhsuk-u-visually-hidden"> - </span>
+            </span>
+            Search and manage users
+          </h1>
         </div>
+      </div>
+    </div>
 
-        <p class="nhsuk-lead-text nhsuk-body-l">Lorem ipsum dolor sit amet4 consectetur adipisicing elit. Rerum repellendus consequuntur odio, dolore nostrum eveniet.</p>
+    <div class="proto-in-page-nav">
+      <div class="nhsuk-grid-row">
+        <div class="nhsuk-grid-column-full">
+          <ul class="proto-in-page-nav__list">
+            <li class="proto-in-page-nav__item proto-in-page-nav__item--active">
+              <a class="proto-in-page-nav__link" href="#">Search users</a>
+            </li>
+            <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Register users</a>
+            </li>
+            {# <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Send welcome message</a>
+            </li> #}
+            <li class="proto-in-page-nav__item">
+              <a class="proto-in-page-nav__link" href="#">Bulk opperation</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="proto-content-block">
+      <div class="nhsuk-grid-row">
+        <div class="nhsuk-grid-column-full">
+          <p class="nhsuk-lead-text nhsuk-body-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum repellendus consequuntur odio, dolore nostrum eveniet.</p>
+        </div>
       </div>
     </div>
 
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
-        {% include 'includes/search-with-listing.html' %}
+        <div class="nhsuk-grid-row">
+          <div class="nhsuk-grid-column-two-thirds">
+            {% include "includes/search.html" %}
+          </div>
+        </div>
+
+        <div class="nhsuk-grid-row">
+          <div class="nhsuk-grid-column-one-third">
+            <div class="search-filters">
+              <div class="search-filters__filter-lists">
+                <h2 class="nhsuk-heading-s">Filters</h2>
+                {{ checkboxes({
+                  "idPrefix": "",
+                  "name": "",
+                  "hint": {
+                    "text": "Select all options that are relevant to you."
+                  },
+                  "items": []
+                }) }}
+                {% set userGroup %}
+                  <form>
+                    {{ checkboxes({
+                      "idPrefix": "example",
+                      "name": "example",
+                      "items": [
+                        {
+                          "value": "Admins",
+                          "text": "Admins"
+                        },
+                        {
+                          "value": "Learners",
+                          "text": "Learners"
+                        }
+                      ]
+                    }) }}
+                  </form>
+                {% endset %}
+                {{ details({
+                  "open": true,
+                  "text": "User group",
+                  "HTML": userGroup
+                }) }}
+
+                {% set status %}
+                  <form>
+                    {{ checkboxes({
+                      "idPrefix": "example",
+                      "name": "example",
+                      "items": [
+                        {
+                          "value": "Account locked",
+                          "text": "Account locked"
+                        },
+                        {
+                          "value": "Password set",
+                          "text": "Password set"
+                        },
+                        {
+                          "value": "account active",
+                          "text": "account active"
+                        },
+                        {
+                          "value": "account inactive",
+                          "text": "account inactive"
+                        }
+                      ]
+                    }) }}
+                  </form>
+                {% endset %}
+                {{ details({
+                  "text": "Status",
+                  "HTML": status
+                }) }}
+
+                {% set jobGroup %}
+                  <form>
+                    {{ checkboxes({
+                      "idPrefix": "example",
+                      "name": "example",
+                      "items": [
+                        {
+                          "value": "Admin / clerical",
+                          "text": "Admin / clerical"
+                        },
+                        {
+                          "value": "Allied Health Professionals",
+                          "text": "Allied Health Professionals"
+                        },
+                        {
+                          "value": "Educational Support",
+                          "text": "Educational Support"
+                        },
+                        {
+                          "value": "Nursing / midwifery",
+                          "text": "Nursing / midwifery"
+                        }
+                      ]
+                    }) }}
+                  </form>
+                {% endset %}
+                {{ details({
+                  "text": "Job group",
+                  "HTML": jobGroup
+                }) }}
+
+                {% set department %}
+                  <form>
+                    {{ checkboxes({
+                      "idPrefix": "example",
+                      "name": "example",
+                      "items": [
+                        {
+                          "value": "ICU",
+                          "text": "ICU"
+                        },
+                        {
+                          "value": "Pathology",
+                          "text": "Pathology"
+                        }
+                      ]
+                    }) }}
+                  </form>
+                {% endset %}
+                {{ details({
+                  "text": "Department or team",
+                  "HTML": department
+                }) }}
+              </div>
+            </div>
+          </div>
+
+          <div class="nhsuk-grid-column-two-thirds">
+            <div class="nhsuk-u-reading-width">
+              <h2 class="nhsuk-heading-s">14,928 results</h2>
+              {% include "includes/users.html" %}
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
-
   {% endblock %}
 
   <!-- For adding a back link -->
