--- a/app/views/layouts/layout.html
+++ b/app/views/layouts/layout.html
@@ -14,7 +14,7 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  DLS prototype
 {% endblock %}
 
 <!-- Edit the header -->
