Update home href in index and proficiencies page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
     "service": {
         "name": "Digital Learning Solutions Prototype"
       },
-      "homeHref": "/prototypes/login-journey",
+      "homeHref": "/",
       "showNav": "false",
       "classes": "",
       "primaryLinks": []
