--- a/app/views/includes/users.html
+++ b/app/views/includes/users.html
@@ -2,48 +2,50 @@
 {% from "components/listing.njk" import listing %}
 {% from 'pagination/macro.njk' import pagination %}
 
-{# Replace with listing component #}
-{% for user in users %}
-  <div class="proto-listing nhsuk-u-reading-width">
-    <ul class="nhsuk-list">
-      <li class="nhsuk-list-item">
-        <h2 class="nhsuk-heading-s nhsuk-u-margin-bottom-3">
-          <a href="#{{loop.index}}">
-            {{user["Name"]}} ({{user["Email"]}})
-          </a>
-        </h2>
-        <div class="nhsuk-body-s nhsuk-u-margin-bottom-0">
-        {% if user["User type"] != "Learner" %}
-          {{ tag({
-            text: "Admin: " + user["User type"],
-            classes: "nhsuk-tag--green"
-          })}}
-        {% endif %}
-        {% if not user["active-user"] %}
-          {{ tag({
-            text: "user inactive",
-            classes: "nhsuk-tag--grey"
-          })}}
-        {% endif %}
-        {% if not user["password set"] %}
-          {{ tag({
-            text: "Password not set",
-            classes: "nhsuk-tag--grey"
-          })}}
-        {% endif %}
-        {% if not user["account claimed"] %}
-          {{ tag({
-            text: "Account unclaimed",
-            classes: "nhsuk-tag--grey"
-          })}}
-        {% endif %}
-        </div>
+{% set listOfUsers = [] %}
+{% set userFormatted = {} %}
 
-        <hr class="nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
-      </li>
-    </ul>
-  </div>
+{% for user in users %}
+
+  {% set heading=user["Name"] + ' (' + user["Email"] + ')' %}
+  {% set href='#user' + loop.index %}
+  {% set content %}
+    {% if user["User type"] != "Learner" %}
+      {{ tag({
+        text: "Admin: " + user["User type"],
+        classes: "nhsuk-tag--green"
+      }) }}
+    {% endif %}
+    {% if not user["active-user"] %}
+      {{ tag({
+        text: "user inactive",
+        classes: "nhsuk-tag--grey"
+      }) }}
+    {% endif %}
+    {% if not user["password set"] %}
+      {{ tag({
+        text: "Password not set",
+        classes: "nhsuk-tag--grey"
+      }) }}
+    {% endif %}
+    {% if not user["account claimed"] %}
+      {{ tag({
+        text: "Account unclaimed",
+        classes: "nhsuk-tag--grey"
+      }) }}
+    {% endif %}
+  {% endset %}
+
+  {% set userFormatted={
+      heading: heading,
+      href: href,
+      content: content
+    } %}
+
+  {% set listOfUsers = (listOfUsers.push(userFormatted), listOfUsers) %}
 {% endfor %}
+
+{{ listing(listOfUsers) }}
 
 {{ pagination({
   "nextUrl": "#next",
