--- a/app/views/prototypes/admin-frameworks/select-a-framework/index.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/index.html
@@ -59,7 +59,7 @@ Welcome - DLS prototype
           }]
         %}
 
-        {{ listing(listing=selectAFramework) }}
+        {{ listing(selectAFramework) }}
 
       </div>
     </div>
