--- a/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
+++ b/app/views/prototypes/admin-frameworks/select-a-framework/framework-dashboard/users/users-search.html
@@ -54,7 +54,7 @@
               <a class="proto-in-page-nav__link" href="#">Search users</a>
             </li>
             <li class="proto-in-page-nav__item">
-              <a class="proto-in-page-nav__link" href="#">Register users</a>
+              <a class="proto-in-page-nav__link" href="/prototypes/register">Register users</a>
             </li>
             {# <li class="proto-in-page-nav__item">
               <a class="proto-in-page-nav__link" href="#">Send welcome message</a>
