--- a/app/views/prototypes/login-journey/index.html
+++ b/app/views/prototypes/login-journey/index.html
@@ -46,7 +46,7 @@
           </div>
           <div class="welcome-page-button-container">
             <a class="nhsuk-button auth-button auth-button--left nhsuk-u-margin-right-4" href="./login-journey/login" role="button">Log in</a>
-            <a class="nhsuk-button nhsuk-button--secondary auth-button" href="#sdffe" role="#100">Register</a>
+            <a class="nhsuk-button nhsuk-button--secondary auth-button" href="#register" role="#100">Register</a>
           </div>
         </div>
       </div>
