Update acklink classes

--- a/app/views/prototypes/register/single/information.html
+++ b/app/views/prototypes/register/single/information.html
@@ -9,8 +9,8 @@
 {% block outerContent %}
   {{ backLink({
     "href": "/prototypes/register/single",
-    "text": "Back",
-    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
+    "text": "Go back",
+    "classes": "nhsuk-width-container nhsuk-u-margin-top-4"
   }) }}
 {% endblock %}
 
