--- a/app/views/prototypes/register/single/welcome.html
+++ b/app/views/prototypes/register/single/welcome.html
@@ -8,9 +8,9 @@
 
 {% block outerContent %}
   {{ backLink({
-    "href": "/prototypes/register/single/promotion",
-    "text": "Back",
-    "classes": "nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-0"
+    "href": "/prototypes/register/multiple/promotion",
+    "text": "Go back",
+    "classes": "nhsuk-width-container nhsuk-u-margin-top-4"
   }) }}
 {% endblock %}
 
