--- a/app/assets/sass/components/_in-page-nav.scss
+++ b/app/assets/sass/components/_in-page-nav.scss
@@ -12,11 +12,33 @@
     justify-content: flex-start;
     align-items: center;
     // width: 100%;
+
+    #{$this}__item:hover {
+      &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        height: nhsuk-spacing(2);
+        background-color: $color_nhsuk-blue;
+      }
+    }
+
+    &:hover #{$this}__item--active:after {
+      display: none;
+    }
+
+    &:hover #{$this}__item--active:hover:after {
+      display: block;
+    }
   }
 
   &__item {
     margin: 0;
     padding: nhsuk-spacing(3);
+    position: relative;
   }
 
   &__item--active {
